# DataCensor-Pipeline

./: COLLABORATORS.md  Pipfile  README.md  TrainedModelTesting.py  censoror.py  extract_names.py  main.py  mainNew.py  mainUsingDF.py  main_v2.py  sample.py  setup.cfg  setup.py  test.py  test_v2.py  train_model.py
assignment1/: main.py  utils.py
docs/output/: 1.censored  sample_text.censored  stats.txt
files/: 1.censored.txt  10.censored.txt  100.censored.txt  1000.censored.txt  1001.censored.txt  1002.censored.txt  1003.censored.txt  1004.censored.txt  101.censored.txt  102.censored.txt  103.censored.txt  104.censored.txt  105.censored.txt  106.censored.txt  107.censored.txt  108.censored.txt  109.censored.txt  11.censored.txt  110.censored.txt  111.censored.txt  112.censored.txt  113.censored.txt  114.censored.txt  115.censored.txt  116.censored.txt  117.censored.txt  118.censored.txt  119.censored.txt  12.censored.txt  120.censored.txt  121.censored.txt  122.censored.txt  123.censored.txt  124.censored.txt  125.censored.txt  126.censored.txt  127.censored.txt  128.censored.txt  129.censored.txt  13.censored.txt  (+562 more)
model-best/: meta.json
model-best/ner/: model  moves
model-last/: config.cfg
model-last/vocab/: strings.json
testfiles/: 1censored  1reghugspy.txt
tests/: test_censoror.py  test_main.py  test_utils.py
