[metadata]
name = assignment1
version = 1.0
description = The project involves scanning Enron email files using a glob pattern, applying censorship to each, and finally saving the redacted versions into a specified output file, effectively securing sensitive content throughout.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

[aliases]
test=pytest

[tool:pytest]
norecursedirs = .*, CVS, _darcs, {arch}, *.egg, venv

[tool.isort]
profile = "black"
